# rotateExtended

./: README.md
rotateExtended/: cabal.project
rotateExtended/rotate/: rotate.cabal
rotateExtended/rotate/rotateUse/: Main.hs
rotateExtended/rotatePlugin/: rotatePlugin.cabal
rotateExtended/rotatePlugin/rotatePlugin/: TestRotatePlugin.hs
rotateExtended/rotatePlugin/rotatePluginBackpack/: LinearRotatePlugin.hs  VectRotatePlugin.hs
rotateExtended/rotatePlugin/rotatePluginUse/: Main.hs
