name:          rotatePlugin
category:      Language
version:       0
license:       BSD2
cabal-version: 2.0
author:        Fog
maintainer:    Fog
stability:     experimental
build-type:    Simple
synopsis:      eg of how to distribute a backpack over multiple packages, here is the signature and a module which uses it
description:   the signature can be implemented by backpack modules provided in a *different* package

library
  default-language: Haskell2010
  ghc-options: -Wall -O2
  hs-source-dirs: rotatePlugin
  signatures: RotatePlugin
  exposed-modules: TestRotatePlugin
  build-depends: base,rotate
 
library rotatePluginBackpack
  default-language: Haskell2010
  ghc-options: -Wall -O2
  exposed-modules: LinearRotatePlugin,VectRotatePlugin
  hs-source-dirs: rotatePluginBackpack
  build-depends: base,linear,vect,rotate

executable rotatePluginUse
  default-language: Haskell2010
  hs-source-dirs: rotatePluginUse
  main-is: Main.hs
  build-depends: base,linear,vect,rotate,rotatePlugin,rotatePluginBackpack
  mixins: rotatePlugin (TestRotatePlugin as Linear.TestRotatePlugin) requires (RotatePlugin as LinearRotatePlugin,Rotate as LinearRotate)
  mixins: rotatePlugin (TestRotatePlugin as Vect.TestRotatePlugin  ) requires (RotatePlugin as VectRotatePlugin  ,Rotate as VectRotate)

 
	




